chore: temporary fix to stop code from wrapping

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -32,3 +32,7 @@
 main {
   font-family: 'Roboto', sans-serif;
 }
+/* NOTE: @drew - 2023-11-28 - temporary fix to stop `code` wrapping */
+code {
+  white-space: nowrap;
+}
